--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,36 +1,31 @@
 {
-  "plugins": ["@typescript-eslint"],
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
   "extends": [
-    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:prettier/recommended"
   ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react", "@typescript-eslint", "react-hooks"],
   "rules": {
-    "prefer-const": "off",
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
-    "comma-dangle": ["error", "always-multiline"],
-    "indent": [
-      2,
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "no-inner-declarations": "off",
-    "jsx-quotes": 1,
-    "linebreak-style": [2, "unix"],
-    "quotes": [2, "single"],
-    "react/display-name": 0,
-    "react/forbid-prop-types": 0,
-    "react/sort-prop-types": 1,
-    "react/jsx-boolean-value": 1,
-    "react/jsx-first-prop-new-line": [2, "multiline"],
-    "react/jsx-closing-bracket-location": [2, "tag-aligned"],
-    "react/jsx-curly-spacing": 1,
-    "react/jsx-indent-props": [2, 2],
-    "react/jsx-no-duplicate-props": 1,
-    "react/jsx-no-literals": 0,
-    "react/jsx-max-props-per-line": [2, { "maximum": 1, "when": "multiline" }]
+    "react/react-in-jsx-scope": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
