--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@storybook/react": "^6.3.12",
     "@types/react": "17.0.31",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1",
     "storybook-addon-next-router": "^3.0.8",
     "typescript": "4.4.4"
