--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "plop": "^2.7.6",
     "prettier": "^2.4.1",
     "storybook-addon-next-router": "^3.0.8",
     "typescript": "4.4.4"
